--- a/css/style.css
+++ b/css/style.css
@@ -14,8 +14,7 @@ h2 {
 }
 
 .completed {
-  /*font-family: sans-serif;*/
-  font-family: serif;
+  font-family: sans-serif;
 }
 
 #tasks .completed {
