--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,10 @@ h2 {
 
 .completed {
   font-family: sans-serif;
+  font-size: 12px;
 }
 
 #tasks .completed {
   background: #ccc;
   text-decoration: underline;
-    font-family: sans-serif;
 }
